--- a/themes/lines/layouts/_default/single.html
+++ b/themes/lines/layouts/_default/single.html
@@ -9,7 +9,7 @@
       {{ if eq .Type "posts" }}
       <h2 itemprop="name headline">{{ .Title }}</h2>
       <p class="meta">
-        <time itemprop="datePublished" datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat " January 02, 2006" .Date }}</time> &bull; 
+        <time itemprop="datePublished" datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat " January 02, 2006" .Date }}</time> &bull;
         {{ partial "tags.html" .}}
         </p>
       {{ end }}
@@ -17,7 +17,10 @@
       <span itemprop="articleBody">
       {{ .Content }}
       </span>
-       
+
+      {{ if not .Params.noComment}}
+        {{ template "_internal/disqus.html" . }}
+      {{ end }}
 
     </section>
     {{ partial "footer.html" . }}
