added google analytics

--- a/themes/lines/layouts/partials/head.html
+++ b/themes/lines/layouts/partials/head.html
@@ -84,6 +84,6 @@
 </script>
 {{ end }}
 
-{{ template "_internal/google_analytics.html" }}
+{{ template "_internal/google_analytics.html" . }}
 
 </head>
