--- a/themes/lines/layouts/partials/footer.html
+++ b/themes/lines/layouts/partials/footer.html
@@ -1,11 +1,6 @@
 <hr>
 <footer>
-<small> <span style="font-family: 'Courier New', Courier, monospace;">∆ Using a modified version of <a style="color: aquamarine;" href="https://github.com/ronv/lines">lines</a> theme by Rolands Vilcins.</span></small>
- <br/>
- <small> <span style="font-family: 'Courier New', Courier, monospace;">∆ Compiled with <a style="color: aquamarine;" href="https://gohugo.io">Hugo</a>.</span></small>
- <br/>
-<small><span style="font-family: 'Courier New', Courier, monospace;">∆ Hosted on <a style="color: aquamarine;" href="https://pages.github.com">GitHub Pages</a>.</span></small>
-
+ <small> <span style="font-family: 'Courier New', Courier, monospace;">∆ Built with <a style="color: aquamarine;" href="https://gohugo.io">hugo</a> & <a style="color: aquamarine;" href="https://github.com/ronv/lines">lines</a>.</span></small>
 	  <nav>
       <ul>
         <li>
