--- a/themes/lines/layouts/partials/header.html
+++ b/themes/lines/layouts/partials/header.html
@@ -12,6 +12,18 @@
   {{ end }}
   </ul>
     </nav>
+
+    <!-- Button Down Subscription -->
+    <form action="https://buttondown.email/api/emails/embed-subscribe/asindu" method="post" target="popupwindow"
+      onsubmit="window.open('https://buttondown.email/asindu', 'popupwindow')" class="embeddable-buttondown-form">
+
+      <!-- <label for="bd-email" style=" color: #c84b31;" ><b>SUBSCRIBE</b></label> -->
+      <input type="email" name="email" id="bd-email" style="height:30px; width:200px;" placeholder="john.doe@gmail.com" />
+
+      <input type="submit" value="Subscribe" style="height:30px; width:100px;" />
+
+    </form>
+
   </header>
   <hr>
 
