--- a/themes/lines/layouts/partials/tags.html
+++ b/themes/lines/layouts/partials/tags.html
@@ -1,4 +1,4 @@
 {{ range $i, $e := .Params.tags -}}
     {{- if $i -}}, {{ end -}}
-    <a href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>{{ $e }}</a>
+    <a style="color: aquamarine;" href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>{{ $e }}</a>
 {{- end -}}
