feat: Added counter

--- a/themes/lines/layouts/404.html
+++ b/themes/lines/layouts/404.html
@@ -15,7 +15,7 @@
       <p>The page you requested doesn't exist.</p>
 
     </section>
-    <!-- / post -->
+    <!-- post -->
 {{ partial "footer.html" . }}
   </main>
 
