--- a/themes/lines/layouts/partials/footer.html
+++ b/themes/lines/layouts/partials/footer.html
@@ -1,6 +1,15 @@
 <hr>
 <footer>
  <small> <span style="font-family: 'Courier New', Courier, monospace;">∆ Built with <a style="color: aquamarine;" href="https://gohugo.io">hugo</a> & <a style="color: aquamarine;" href="https://github.com/ronv/lines">lines</a>.</span></small>
+ <p>
+ <small>
+  <span style="font-family: 'Courier New', Courier, monospace;">
+    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}contact-us">Contact Us</a> |
+    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}privacy-policy">Privacy Policy</a> |
+    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}terms-and-conditions">Terms & Conditions</a>
+  </span>
+ </small>
+ </p>
 	  <nav>
       <ul>
         <li>
