--- a/themes/lines/layouts/partials/footer.html
+++ b/themes/lines/layouts/partials/footer.html
@@ -4,9 +4,9 @@
  <p>
  <small>
   <span style="font-family: 'Courier New', Courier, monospace;">
-    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}contact-us">Contact Us</a> |
-    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}privacy-policy">Privacy Policy</a> |
-    <a style="color: aquamarine;" href="{{ .Site.BaseURL }}terms-and-conditions">Terms & Conditions</a>
+    <a style="color: aquamarine;" href="/contact-us">Contact Us</a> |
+    <a style="color: aquamarine;" href="privacy-policy.html">Privacy Policy</a> |
+    <a style="color: aquamarine;" href="terms-and-conditions.html">Terms & Conditions</a>
   </span>
  </small>
  </p>
