--- a/themes/lines/layouts/partials/header.html
+++ b/themes/lines/layouts/partials/header.html
@@ -18,7 +18,7 @@
       onsubmit="window.open('https://buttondown.email/asindu', 'popupwindow')" class="embeddable-buttondown-form">
 
       <!-- <label for="bd-email" style=" color: #c84b31;" ><b>SUBSCRIBE</b></label> -->
-      <input type="email" name="email" id="bd-email" style="height:30px; width:200px;" placeholder="john.doe@gmail.com" />
+      <input type="email" name="email" id="bd-email" style="height:30px; width:200px;" placeholder="steve.jobs@gmail.com" />
 
       <input type="submit" value="Subscribe" style="height:30px; width:100px;" />
     </form>
