updated link to X

--- a/themes/lines/layouts/_default/single.html
+++ b/themes/lines/layouts/_default/single.html
@@ -5,7 +5,6 @@
 <main>
     {{ partial "header.html" . }}
   <section>
-
       {{ if eq .Type "posts" }}
 
       {{ $list_of_posts := (where .Site.RegularPages  "Section" "posts" ).ByDate.Reverse }}
@@ -37,8 +36,12 @@
         <h2 itemprop="name headline">{{ .Title }}</h2>
       -->
       <p>
-      by Asindu (<a style="color: aquamarine; text-decoration: none;" href="https://x.com/as1ndu">@as1ndu</a> on  <span style="font-size: x-large; color: aquamarine;">𝕩</span>)
+        by
+        <b>
+          Asindu (<a style="color: aquamarine; text-decoration: none;" href="https://x.com/as1ndu">@as1ndu</a> on  <span style="font-size: x-large; color: aquamarine;">𝕩</span>)
+        </b>
       </p>
+
       <p class="meta">
         <time itemprop="datePublished" datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat " January 02, 2006" .Date }}</time> &bull;
         {{ partial "tags.html" .}}
