--- a/themes/lines/layouts/_default/list.html
+++ b/themes/lines/layouts/_default/list.html
@@ -28,7 +28,8 @@
             {{ $counter = sub $counter 1 }}
 
             <hr>
-           <time datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat "2006-01-02" .Date }}</time>
+            <time>§</time>
+           <!-- <time datetime="{{ dateFormat "2006-01-02" .Date }}">{{ dateFormat "2006-01-02" .Date }}</time> -->
           </li>
           {{ end }}
         {{ end }}
