--- a/themes/lines/layouts/partials/head.html
+++ b/themes/lines/layouts/partials/head.html
@@ -86,4 +86,7 @@
 
 {{ template "_internal/google_analytics.html" . }}
 
+<!-- AdSense Code  -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7932960094058650" crossorigin="anonymous"></script>
+
 </head>
