feat: Added ad unit

--- a/themes/lines/layouts/partials/header.html
+++ b/themes/lines/layouts/partials/header.html
@@ -23,6 +23,21 @@
       <input type="submit" value="Subscribe" style="height:30px; width:100px;" />
     </form>
 
+    <!-- Adsense Code -->
+      <div id="adsense-unit">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7932960094058650"
+            crossorigin="anonymous"></script>
+        <!-- Horizontal Ad Unit -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-7932960094058650"
+            data-ad-slot="7467586239"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
   </header>
   <hr>
 
