feat: Updated Ad Unit

--- a/themes/lines/assets/scss/styles.scss
+++ b/themes/lines/assets/scss/styles.scss
@@ -182,4 +182,9 @@ a.footnote-ref {
 	color: #C84B31;
 }
 
+#adsense-unit{
+	// max-height: fit-content;
+	// background-color: #C84B31;
+	margin-top: 20px;
+}
 
