--- a/themes/lines/layouts/_default/single.html
+++ b/themes/lines/layouts/_default/single.html
@@ -38,7 +38,7 @@
       <p>
         by
         <b>
-          Asindu (<a style="color: aquamarine; text-decoration: none;" href="https://x.com/as1ndu">@as1ndu</a> on  <span style="font-size: large; color: aquamarine;">𝕩</span>)
+          <a href="/about">Asindu</a>
         </b>
       </p>
 
