--- a/themes/lines/layouts/partials/head.html
+++ b/themes/lines/layouts/partials/head.html
@@ -9,6 +9,7 @@
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/schema.html" . }}
   <link rel="canonical" href="{{ .Permalink | absURL }}">
+  <link rel="stylesheet" type="text/css" href="/syntax.css">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
   <link rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}atom.xml" />
@@ -30,7 +31,7 @@
 }
 </script>
 {{ else if .IsPage }}
-{{ $author :=  or (.Params.author) (.Site.Author.name) }}
+{{ $author :=  or (.Params.author) (.Site.Params.Author) }}
 {{ $org_name :=  .Site.Title }}
 <script type="application/ld+json">
 {
